@@ -6,14 +6,18 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import uk.gov.hmcts.ecm.common.idam.models.UserDetails;
+import uk.gov.hmcts.et.common.model.ccd.CaseData;
 import uk.gov.hmcts.et.common.model.ccd.items.GenericTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.types.CaseNote;
 import uk.gov.hmcts.et.common.model.multiples.MultipleData;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.MultipleUtil;
+import uk.gov.hmcts.ethos.replacement.docmosis.service.CaseNotesService;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.UserIdamService;
 
 import java.util.ArrayList;
+import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -52,8 +56,8 @@ class CaseNotesServiceTest {
         caseNotesService.addCaseNote(multipleData, userToken);
         userDetails.setName(NAME);
 
-        var caseNoteCollection = multipleData.getMultipleCaseNotesCollection();
-        CaseNote createdNote = caseNoteCollection.get(0).getValue();
+        List<GenericTypeItem<CaseNote>> caseNoteCollection = multipleData.getMultipleCaseNotesCollection();
+        CaseNote createdNote = caseNoteCollection.getFirst().getValue();
         assertEquals(1, caseNoteCollection.size());
         assertEquals(createdNote, caseNote);
         assertEquals(EMAIL, createdNote.getAuthor());
@@ -67,8 +71,8 @@ class CaseNotesServiceTest {
         multipleData.setCaseNote(caseNote);
         caseNotesService.addCaseNote(multipleData, userToken);
 
-        var caseNoteCollection = multipleData.getMultipleCaseNotesCollection();
-        CaseNote createdNote = caseNoteCollection.get(0).getValue();
+        List<GenericTypeItem<CaseNote>> caseNoteCollection = multipleData.getMultipleCaseNotesCollection();
+        CaseNote createdNote = caseNoteCollection.getFirst().getValue();
         assertEquals(1, caseNoteCollection.size());
         assertEquals(createdNote, caseNote);
         assertEquals(EMAIL, createdNote.getAuthor());
@@ -85,10 +89,41 @@ class CaseNotesServiceTest {
 
         caseNotesService.addCaseNote(multipleData, userToken);
 
-        var caseNoteCollection = multipleData.getMultipleCaseNotesCollection();
+        List<GenericTypeItem<CaseNote>> caseNoteCollection = multipleData.getMultipleCaseNotesCollection();
         assertEquals(2, caseNoteCollection.size());
         assertNotNull(caseNoteCollection.get(1).getValue().getDate());
         assertNull(multipleData.getCaseNote());
+    }
 
+    @Test
+    void verifySingleCaseIsSetWithCaseNotes() {
+        userDetails.setName(NAME);
+        CaseData caseData = new CaseData();
+        caseData.setAddCaseNote(caseNote);
+        caseNotesService.addCaseNote(caseData, userToken);
+
+        List<GenericTypeItem<CaseNote>> caseNoteCollection = caseData.getCaseNotesCollection();
+        CaseNote createdNote = caseNoteCollection.getFirst().getValue();
+        assertEquals(1, caseNoteCollection.size());
+        assertEquals(createdNote, caseNote);
+        assertEquals(NAME, createdNote.getAuthor());
+        assertNotNull(createdNote.getDate());
+        assertNull(caseData.getAddCaseNote());
+    }
+
+    @Test
+    void verifySingleCaseIsSetWithCaseNotes_nullUserDetails() {
+        when(userIdamService.getUserDetails(userToken)).thenReturn(null);
+        CaseData caseData = new CaseData();
+        caseData.setAddCaseNote(caseNote);
+        assertDoesNotThrow(() -> caseNotesService.addCaseNote(caseData, userToken));
+
+        List<GenericTypeItem<CaseNote>> caseNoteCollection = caseData.getCaseNotesCollection();
+        assertEquals(1, caseNoteCollection.size());
+        CaseNote createdNote = caseNoteCollection.getFirst().getValue();
+        assertEquals(createdNote, caseNote);
+        assertEquals("Unknown", createdNote.getAuthor());
+        assertNotNull(createdNote.getDate());
+        assertNull(caseData.getAddCaseNote());
     }
 }
